{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 69,
  "lineage": "1b818001-f0a8-6b43-8d5d-114fc40da992",
  "resources": [
    {
      "module": "module.gcp-compute-instance",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_external",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.246.52.3",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-04-30T14:10:04.608-07:00",
            "id": "projects/terraform-automation-001/regions/europe-west2/addresses/ipv4-address-terraform",
            "name": "ipv4-address-terraform",
            "network_tier": "PREMIUM",
            "project": "terraform-automation-001",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-automation-001/regions/europe-west2/addresses/ipv4-address-terraform"
          }
        }
      ]
    },
    {
      "module": "module.gcp-compute-instance",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9001"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-30T14:10:47.780-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/terraform-automation-001/global/firewalls/test-firewall-http",
            "name": "test-firewall-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-automation-001/global/networks/vpc-network",
            "priority": 1000,
            "project": "terraform-automation-001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-automation-001/global/firewalls/test-firewall-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.gcp-compute-instance.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.gcp-compute-instance",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9002"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-30T14:10:47.805-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/terraform-automation-001/global/firewalls/test-firewall-https",
            "name": "test-firewall-https",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-automation-001/global/networks/vpc-network",
            "priority": 1000,
            "project": "terraform-automation-001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-automation-001/global/firewalls/test-firewall-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.gcp-compute-instance.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.gcp-compute-instance",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-30T14:10:47.775-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/terraform-automation-001/global/firewalls/test-firewall-ssh",
            "name": "test-firewall-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-automation-001/global/networks/vpc-network",
            "priority": 1000,
            "project": "terraform-automation-001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-automation-001/global/firewalls/test-firewall-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.gcp-compute-instance.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.gcp-sql-database",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-mysql",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-30T14:10:04.408-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/terraform-automation-001/global/firewalls/default-firewall-mysql-port",
            "name": "default-firewall-mysql-port",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-automation-001/global/networks/default",
            "priority": 1000,
            "project": "terraform-automation-001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-automation-001/global/firewalls/default-firewall-mysql-port",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.gcp-compute-instance",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-8-v20200413",
                    "size": 10,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-automation-001/zones/europe-west2-b/disks/gcp-test-instance-001"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-automation-001/zones/europe-west2-b/instances/gcp-test-instance-001",
            "instance_id": "9092168390201999415",
            "label_fingerprint": "dD7wNctNT8Q=",
            "labels": {
              "environment": "test"
            },
            "machine_type": "f1-micro",
            "metadata_fingerprint": "jT-34pvZrto=",
            "name": "gcp-test-instance-001",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.246.52.3",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-automation-001/global/networks/vpc-network",
                "network_ip": "10.154.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-automation-001/regions/europe-west2/subnetworks/vpc-network",
                "subnetwork_project": "terraform-automation-001"
              }
            ],
            "project": "terraform-automation-001",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-automation-001/zones/europe-west2-b/instances/gcp-test-instance-001",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "https",
              "ssh"
            ],
            "tags_fingerprint": "FeWfR_dobKY=",
            "zone": "europe-west2-b"
          },
          "dependencies": [
            "module.gcp-compute-instance.google_compute_address.static_external",
            "module.gcp-compute-instance.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.gcp-compute-instance",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/terraform-automation-001/global/networks/vpc-network",
            "name": "vpc-network",
            "project": "terraform-automation-001",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-automation-001/global/networks/vpc-network"
          }
        }
      ]
    }
  ]
}